crates/paladin-core/tests/trybuild/account_not_serialize.stderr
error[E0277]: the trait bound `Account: serde::Serialize` is not satisfied
  --> tests/trybuild/account_not_serialize.rs:12:26
   |
12 |     requires_serialize::<paladin_core::Account>();
   |                          ^^^^^^^^^^^^^^^^^^^^^ the trait `Serialize` is not implemented for `Account`
   |
   = note: for local types consider adding `#[derive(serde::Serialize)]` to your `Account` type
   = note: for types from other crates check whether the crate offers a `serde` feature flag
   = help: the following other types implement trait `Serialize`:
             &'a T
             &'a mut T
             ()
             (T,)
             (T0, T1)
             (T0, T1, T2)
             (T0, T1, T2, T3)
             (T0, T1, T2, T3, T4)
           and $N others
note: required by a bound in `requires_serialize`
  --> tests/trybuild/account_not_serialize.rs:9:26
   |
 9 | fn requires_serialize<T: serde::Serialize>() {}
   |                          ^^^^^^^^^^^^^^^^ required by this bound in `requires_serialize`
